--- a/ios/CoreAnimation/CoreAnimation/en.lproj/MainStoryboard.storyboard
+++ b/ios/CoreAnimation/CoreAnimation/en.lproj/MainStoryboard.storyboard
@@ -3,7 +3,7 @@
     <dependencies>
         <deployment defaultVersion="1296" identifier="iOS"/>
         <development defaultVersion="4200" identifier="xcode"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1179"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1181"/>
     </dependencies>
     <scenes>
         <!--Table View Controller - Root View Controller-->
@@ -81,6 +81,27 @@
                                             <segue destination="ddI-Oz-Vrw" kind="push" identifier="animating transition" id="nb2-mb-Hbd"/>
                                         </connections>
                                     </tableViewCell>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" textLabel="hQf-t7-CXN" style="IBUITableViewCellStyleDefault" id="6Yf-nn-0vi">
+                                        <rect key="frame" x="0.0" y="132" width="320" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="300" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="layer" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" id="hQf-t7-CXN">
+                                                    <rect key="frame" x="10" y="0.0" width="280" height="43"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <color key="highlightedColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                                </label>
+                                            </subviews>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        </view>
+                                        <connections>
+                                            <segue destination="UOz-bf-YId" kind="push" id="bpm-Ce-Yda"/>
+                                        </connections>
+                                    </tableViewCell>
                                 </cells>
                             </tableViewSection>
                         </sections>
@@ -116,6 +137,21 @@
                 </viewController>
             </objects>
             <point key="canvasLocation" x="557" y="639"/>
+        </scene>
+        <!--Layer View Controller-->
+        <scene sceneID="cWe-6U-OMa">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="6VT-6w-rZ2" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController id="UOz-bf-YId" customClass="LayerViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="l9g-bb-k7E">
+                        <rect key="frame" x="0.0" y="64" width="320" height="416"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="ooT-Kc-3yB"/>
+                </viewController>
+            </objects>
+            <point key="canvasLocation" x="557" y="1202"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="H4n-PU-II3">
@@ -190,6 +226,9 @@
         </class>
         <class className="FlipView" superclassName="UIView">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/FlipView.h"/>
+        </class>
+        <class className="LayerViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/LayerViewController.h"/>
         </class>
     </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
