--- a/ios/Dialog/Dialog/en.lproj/MainStoryboard.storyboard
+++ b/ios/Dialog/Dialog/en.lproj/MainStoryboard.storyboard
@@ -105,6 +105,22 @@
             <point key="canvasLocation" x="555" y="74"/>
         </scene>
     </scenes>
+    <classes>
+        <class className="ModalPaneViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ModalPaneViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="cancel:"/>
+                <relationship kind="action" name="done:"/>
+            </relationships>
+        </class>
+        <class className="ViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="alertImage:"/>
+                <relationship kind="action" name="modalPane:"/>
+            </relationships>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
