--- a/ios/Dialog/Dialog/en.lproj/MainStoryboard.storyboard
+++ b/ios/Dialog/Dialog/en.lproj/MainStoryboard.storyboard
@@ -15,6 +15,21 @@
                         <rect key="frame" x="0.0" y="20" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="EJ0-7C-gIi">
+                                <rect key="frame" x="135" y="20" width="120" height="37"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="Alert Dismiss">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="alertDismiss:" destination="2" eventType="touchUpInside" id="8Z7-Bz-PtE"/>
+                                </connections>
+                            </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="iIJ-1Q-Cu3">
                                 <rect key="frame" x="20" y="20" width="107" height="37"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -149,7 +164,7 @@
                     </view>
                 </viewController>
             </objects>
-            <point key="canvasLocation" x="555" y="93"/>
+            <point key="canvasLocation" x="876" y="317"/>
         </scene>
     </scenes>
     <classes>
@@ -163,6 +178,7 @@
         <class className="ViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/ViewController.h"/>
             <relationships>
+                <relationship kind="action" name="alertDismiss:"/>
                 <relationship kind="action" name="alertImage:"/>
                 <relationship kind="action" name="cancel:"/>
                 <relationship kind="action" name="done:"/>
