--- a/ios/ContainerVC/ContainerVC/OneStoryboard.storyboard
+++ b/ios/ContainerVC/ContainerVC/OneStoryboard.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2840" systemVersion="11G56" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="10J-50-RNP">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2843" systemVersion="11G63" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="10J-50-RNP">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1926"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1929"/>
     </dependencies>
     <scenes>
         <!--One View Controller-->
@@ -9,9 +9,10 @@
             <objects>
                 <viewController id="10J-50-RNP" customClass="OneViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Hkf-WN-TfC">
-                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
+                            <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="Default.png" translatesAutoresizingMaskIntoConstraints="NO" id="dZ2-Hm-XLs"/>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="One" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vfh-lV-aZr">
                                 <fontDescription key="fontDescription" type="system" pointSize="32"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -33,10 +34,12 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="vfh-lV-aZr" firstAttribute="centerY" secondItem="Hkf-WN-TfC" secondAttribute="centerY" type="default" id="5fW-zV-qmD"/>
-                            <constraint firstItem="trZ-TU-edb" firstAttribute="top" secondItem="vfh-lV-aZr" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="MbA-4i-0zn"/>
-                            <constraint firstItem="vfh-lV-aZr" firstAttribute="centerX" secondItem="Hkf-WN-TfC" secondAttribute="centerX" type="default" id="b1C-eM-Wj7"/>
+                            <constraint firstAttribute="bottom" secondItem="trZ-TU-edb" secondAttribute="bottom" constant="20" symbolic="YES" type="default" id="NRS-OH-FuC"/>
+                            <constraint firstItem="vfh-lV-aZr" firstAttribute="top" secondItem="Hkf-WN-TfC" secondAttribute="top" constant="20" symbolic="YES" type="default" id="OKh-rk-Njs"/>
+                            <constraint firstItem="dZ2-Hm-XLs" firstAttribute="leading" secondItem="Hkf-WN-TfC" secondAttribute="leading" type="default" id="kFy-rG-T5O"/>
                             <constraint firstItem="trZ-TU-edb" firstAttribute="centerX" secondItem="vfh-lV-aZr" secondAttribute="centerX" type="default" id="w0t-S3-1dL"/>
+                            <constraint firstItem="dZ2-Hm-XLs" firstAttribute="bottom" secondItem="Hkf-WN-TfC" secondAttribute="bottom" type="default" id="zJn-Cg-wYk"/>
+                            <constraint firstItem="vfh-lV-aZr" firstAttribute="centerX" secondItem="dZ2-Hm-XLs" secondAttribute="centerX" type="default" id="zvc-2H-m8t"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -45,6 +48,9 @@
             <point key="canvasLocation" x="234" y="78"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Default.png" width="320" height="480"/>
+    </resources>
     <classes>
         <class className="NSLayoutConstraint" superclassName="NSObject">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
@@ -59,6 +65,6 @@
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
-        <simulatedScreenMetrics key="destination" type="retina4"/>
+        <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
 </document>
