--- a/ios/ContainerVC/ContainerVC/NCTwoStoryboard.storyboard
+++ b/ios/ContainerVC/ContainerVC/NCTwoStoryboard.storyboard
@@ -99,6 +99,7 @@
         <class className="DetailViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/DetailViewController.h"/>
             <relationships>
+                <relationship kind="action" name="toggleVC:"/>
                 <relationship kind="outlet" name="detailDescriptionLabel" candidateClass="UILabel"/>
             </relationships>
         </class>
