--- a/ios/VirtualEarth/VirtualEarth/en.lproj/MainStoryboard.storyboard
+++ b/ios/VirtualEarth/VirtualEarth/en.lproj/MainStoryboard.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2843" systemVersion="11G63" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2843" systemVersion="11G63" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="2">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1929"/>
     </dependencies>
@@ -12,17 +12,12 @@
                         <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <view multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SiP-EU-4UA" customClass="BMMapView">
+                            <view multipleTouchEnabled="YES" contentMode="scaleToFill" id="SiP-EU-4UA" customClass="BMMapView">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="548"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                             </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="SiP-EU-4UA" firstAttribute="top" secondItem="3" secondAttribute="top" type="default" id="3U6-oV-Ok6"/>
-                            <constraint firstItem="SiP-EU-4UA" firstAttribute="bottom" secondItem="3" secondAttribute="bottom" type="default" id="ctE-D1-ZFW"/>
-                            <constraint firstItem="SiP-EU-4UA" firstAttribute="trailing" secondItem="3" secondAttribute="trailing" type="default" id="fJS-K1-fWk"/>
-                            <constraint firstItem="SiP-EU-4UA" firstAttribute="leading" secondItem="3" secondAttribute="leading" type="default" id="oBh-vv-euF"/>
-                        </constraints>
                     </view>
                     <connections>
                         <outlet property="mapView" destination="SiP-EU-4UA" id="gP3-3e-QUG"/>
@@ -35,9 +30,6 @@
     <classes>
         <class className="BMMapView" superclassName="UIView">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/BMMapView.h"/>
-        </class>
-        <class className="NSLayoutConstraint" superclassName="NSObject">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
         </class>
         <class className="VirtualEarthViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/VirtualEarthViewController.h"/>
