--- a/ios/AudioPlayer/AudioPlayer/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/ios/AudioPlayer/AudioPlayer/en.lproj/MainStoryboard_iPhone.storyboard
@@ -158,7 +158,7 @@
             <objects>
                 <viewController id="xjP-Xl-yT8" customClass="DetailViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="VkE-X3-2N0">
-                        <rect key="frame" x="0.0" y="64" width="320" height="455"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="499"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bPX-E5-HMW">
@@ -200,8 +200,8 @@
                     <connections>
                         <segue destination="mGz-hd-1CU" kind="relationship" relationship="viewControllers" id="tTH-lw-Cbt"/>
                         <segue destination="1Ca-F7-Puo" kind="relationship" relationship="viewControllers" id="IJI-1K-CPD"/>
-                        <segue destination="M7z-Ne-MyC" kind="relationship" relationship="viewControllers" id="J8J-8O-YGU"/>
                         <segue destination="dqG-rs-5qZ" kind="relationship" relationship="viewControllers" id="3uR-2S-xRc"/>
+                        <segue destination="M7z-Ne-MyC" kind="relationship" relationship="viewControllers" id="QgK-gS-uin"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="14" sceneMemberID="firstResponder"/>
@@ -238,6 +238,6 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="D1o-0i-Dcl"/>
+        <segue reference="L0Y-wb-oxk"/>
     </inferredMetricsTieBreakers>
 </document>
